[tool.poetry]
name = "find-a-friend"
version = "0.1.0"
description = ""
authors = ["Eduardo Pizorno <pizorno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
flask = "^3.1.0"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.0"
mock-alchemy = "^0.2.6"
mypy = "^1.13.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=find_a_friend -vv"
post_test = "coverage html"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
